b2 to platform operator

--- a/data/mapping.json
+++ b/data/mapping.json
@@ -173,7 +173,7 @@
       "R8", "R9", "R10", "R11", "R12", "R13", "R14", "R28"
     ],
     "skills": {
-      "Basic":   ["B1", "B3", "B4", "B7", "B8", "B10"],
+      "Basic":   ["B1", "B2", "B3", "B4", "B7", "B8", "B10"],
       "Intermediate": ["I2", "I3", "I4", "I7", "I8", "I10"],
       "Advanced": ["A1", "A3", "A4", "A8", "A9"]
     }
