Refactor skills section in mapping.json

--- a/data/mapping.json
+++ b/data/mapping.json
@@ -178,8 +178,8 @@
       "R8", "R9", "R10", "R11", "R12", "R13", "R14", "R28", "R30"
     ],
     "skills": {
-      "Basic":   ["B0", "B1", "B2", "B3", "B4", "B7", "B8", "B10", "B11"],
-      "Intermediate": ["I2", "I3", "I4", "I7", "I8", "I10", "I11"],
+      "Basic":   ["B0", "B1", "B2", "B3", "B4", "B7", "B8", "B10"],
+      "Intermediate": ["I2", "I3", "I4", "I7", "I8", "I10"],
       "Advanced": ["A1", "A3", "A4", "A8", "A9"]
     }
   },
@@ -189,8 +189,8 @@
       "R13", "R19", "R20", "R21", "R25", "R26", "R30"
     ],
     "skills": {
-      "Basic":   ["B0", "B1", "B3", "B4", "B6", "B11"],
-      "Intermediate": ["I5", "I7", "I10", "I11"],
+      "Basic":   ["B0", "B1", "B3", "B4", "B6"],
+      "Intermediate": ["I5", "I7", "I10"],
       "Advanced": ["A2", "A4", "A7"]
     }
   },
@@ -200,8 +200,8 @@
       "R6", "R12", "R15", "R16", "R17", "R18", "R21", "R27", "R30"
     ],
     "skills": {
-      "Basic":   ["B0", "B1", "B2", "B4", "B8", "B10", "B11"],
-      "Intermediate": ["I2", "I3", "I4", "I8", "I9", "I10", "I11"],
+      "Basic":   ["B0", "B1", "B2", "B4", "B8", "B10"],
+      "Intermediate": ["I2", "I3", "I4", "I8", "I9", "I10"],
       "Advanced": ["A1", "A2", "A3", "A6", "A7", "A9", "A10"]
     }
   },
@@ -211,8 +211,8 @@
       "R14", "R22", "R23", "R24", "R30"
     ],
     "skills": {
-      "Basic":   ["B0", "B4", "B7", "B10", "B11"],
-      "Intermediate": ["I4", "I8", "I11"],
+      "Basic":   ["B0", "B4", "B7", "B10"],
+      "Intermediate": ["I4", "I8"],
       "Advanced": ["A3", "A9"]
     }
   }
